--- a/install/kubernetes/helm/istio/charts/pilot/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/pilot/templates/deployment.yaml
@@ -113,6 +113,10 @@ spec:
             value: "{{ .Values.enableProtocolSniffingForOutbound }}"
           - name: PILOT_ENABLE_PROTOCOL_SNIFFING_FOR_INBOUND
             value: "{{ .Values.enableProtocolSniffingForInbound }}"
+{{- if .Values.enableProxyClientOriginalAddress }}
+          - name: PILOT_ENABLE_PROXY_CLIENT_ORIGINAL_ADDRESS
+            value: "1"
+{{- end }}
           resources:
 {{- if .Values.resources }}
 {{ toYaml .Values.resources | indent 12 }}
