Enables incremental MCP and EDS in coredatamodel

--- a/install/kubernetes/helm/istio/charts/pilot/values.yaml
+++ b/install/kubernetes/helm/istio/charts/pilot/values.yaml
@@ -55,7 +55,9 @@ podAntiAffinityTermLabelSelector: []
 # increasing system churn.
 keepaliveMaxServerConnectionAge: 30m
 
-# list of platform service registries to read from
-# options are Consul, Kubernetes, MCP, Mock
-registries:
-  - Kubernetes
+# This is used to set the source of configuration for
+# the associated address in configSource, if nothing is specificed
+# the default MCP is assumed. The alternative option is SERVICE_REGISTRY
+# which describes the source is only forwarding synthetic service entries
+configSource:
+  subscribedResources:
