--- a/pkg/test/framework/components/redis/redis.yaml
+++ b/pkg/test/framework/components/redis/redis.yaml
@@ -146,11 +146,10 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        image: docker.io/bitnami/redis:4.0.12
-        imagePullPolicy: "Always"
+        image: {{.DockerHub}}/bitnami/redis:4.0.12
+        imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
-          
         args:
         - "--port"
         - "$(REDIS_PORT)"
@@ -256,8 +255,8 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        image: "docker.io/bitnami/redis:4.0.12"
-        imagePullPolicy: "Always"
+        image: "{{.DockerHub}}/bitnami/redis:4.0.12"
+        imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
           
@@ -315,8 +314,8 @@ spec:
           mountPath: /opt/bitnami/redis/etc
       initContainers:
       - name: volume-permissions
-        image: "docker.io/bitnami/minideb:latest"
-        imagePullPolicy: "IfNotPresent"
+        image: "{{.DockerHub}}/bitnami/minideb:latest"
+        imagePullPolicy: "{{.ImagePullPolicy}}"
         command: ["/bin/chown", "-R", "1001:1001", "/data"]
         securityContext:
           runAsUser: 0
@@ -348,5 +347,3 @@ spec:
             storage: "8Gi"
   updateStrategy:
     type: RollingUpdate
-
-
