--- a/pkg/test/framework/components/redis/redis.yaml
+++ b/pkg/test/framework/components/redis/redis.yaml
@@ -146,7 +146,8 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        image: {{.DockerHub}}/bitnami/redis:4.0.12
+        # Assumption we use the same registry for istio images and the bitnami images
+        image: {{ (split "/" .Hub)._0 }}/bitnami/redis:4.0.12
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
@@ -255,7 +256,7 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        image: "{{.DockerHub}}/bitnami/redis:4.0.12"
+        image: "{{ (split "/" .Hub)._0 }}/bitnami/redis:4.0.12"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
@@ -314,7 +315,7 @@ spec:
           mountPath: /opt/bitnami/redis/etc
       initContainers:
       - name: volume-permissions
-        image: "{{.DockerHub}}/bitnami/minideb:latest"
+        image: "{{ (split "/" .Hub)._0 }}/bitnami/minideb:latest"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command: ["/bin/chown", "-R", "1001:1001", "/data"]
         securityContext:
