Add the option --enableManageWebhookConfig
Add the option --enableManageWebhookConfig to allow turning on/off
Sidecar Injector managing its own webhookconfiguration.

--- a/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/templates/deployment.yaml
@@ -52,6 +52,7 @@ spec:
             - --meshConfig=/etc/istio/config/mesh
             - --healthCheckInterval=2s
             - --healthCheckFile=/health
+            - --enableManageWebhookConfig={{ .Values.enableManageWebhookConfig }}
           volumeMounts:
           - name: config-volume
             mountPath: /etc/istio/config
