--- a/galley/docker/Dockerfile.galley
+++ b/galley/docker/Dockerfile.galley
@@ -9,7 +9,7 @@ FROM docker.io/istio/base:${BASE_VERSION} as default
 
 # The following section is used as base image if BASE_DISTRIBUTION=distroless
 # hadolint ignore=DL3007
-FROM gcr.io/distroless/static:latest as distroless
+FROM gcr.io/distroless/static:nonroot as distroless
 
 # This will build the final image based on either default or distroless from above
 # hadolint ignore=DL3006
