--- a/mixer/docker/Dockerfile.mixer_codegen
+++ b/mixer/docker/Dockerfile.mixer_codegen
@@ -4,11 +4,12 @@ ARG BASE_DISTRIBUTION=default
 # The following section is used as base image if BASE_DISTRIBUTION=default
 # No tag available https://hub.docker.com/_/scratch?tab=description
 # hadolint ignore=DL3006
-FROM scratch as default
+FROM istionightly/base_debug as default
+USER istio
 
 # The following section is used as base image if BASE_DISTRIBUTION=distroless
 # hadolint ignore=DL3007
-FROM gcr.io/distroless/static:latest as distroless
+FROM gcr.io/distroless/static:nonroot as distroless
 
 # This will build the final image based on either default or distroless from above
 # hadolint ignore=DL3006
