Add Bitnamihub for bitnami images

--- a/pkg/test/framework/components/redis/redis.yaml
+++ b/pkg/test/framework/components/redis/redis.yaml
@@ -145,8 +145,7 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        # Assumption we use the same registry for istio images and the bitnami images
-        image: "{{ (split '/' .Hub)._0 }}/bitnami/redis:4.0.1"
+        image: "{{ BitnamiHub }}/redis:4.0.1"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
@@ -255,7 +254,7 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        image: "{{ (split '/' .Hub)._0 }}/bitnami/redis:4.0.12"
+        image: "{{ BitnamiHub }}/redis:4.0.12"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
@@ -313,7 +312,7 @@ spec:
           mountPath: /opt/bitnami/redis/etc
       initContainers:
       - name: volume-permissions
-        image: "{{ (split '/' .Hub)._0 }}/bitnami/minideb:latest"
+        image: "{{ BitnamiHub }}/minideb:latest"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command: ["/bin/chown", "-R", "1001:1001", "/data"]
         securityContext:
