--- a/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/values.yaml
+++ b/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/values.yaml
@@ -49,4 +49,4 @@ alwaysInjectSelector: []
 # When it is false, Sidecar Injector does not configure its k8s mutatingwebhookconfiguration.
 # If another component configures the k8s mutatingwebhookconfiguration for Sidecar Injector,
 # this parameter should be set as false.
-enableSidecarInjectorToManageWebhookConfig: true
+reconcileWebhookConfig: true
