--- a/install/kubernetes/helm/istio/charts/tracing/values.yaml
+++ b/install/kubernetes/helm/istio/charts/tracing/values.yaml
@@ -31,7 +31,8 @@ podAntiAffinityTermLabelSelector: []
 jaeger:
   hub: docker.io/jaegertracing
   image: all-in-one
-  tag: 1.12
+  tag: 1.14
+  podAnnotations: {}
   memory:
     max_traces: 50000
   # spanStorageType value can be "memory" and "badger" for all-in-one image
