--- a/install/kubernetes/helm/istio-init/files/crd-11.yaml
+++ b/install/kubernetes/helm/istio-init/files/crd-11.yaml
@@ -1,28 +1,116 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sidecars.networking.istio.io
+  annotations:
+    "helm.sh/resource-policy": keep
+  creationTimestamp: null
   labels:
     app: istio-pilot
     chart: istio
     heritage: Tiller
     release: istio
-  annotations:
-    "helm.sh/resource-policy": keep
+  name: sidecars.networking.istio.io
 spec:
   group: networking.istio.io
   names:
-    kind: Sidecar
-    plural: sidecars
-    singular: sidecar
     categories:
     - istio-io
     - networking-istio-io
+    kind: Sidecar
+    plural: sidecars
+    singular: sidecar
   scope: Namespaced
   subresources:
     status: {}
+  validation:
+    openAPIV3Schema:
+      properties:
+        spec:
+          properties:
+            egress:
+              items:
+                properties:
+                  bind:
+                    format: string
+                    type: string
+                  captureMode:
+                    enum:
+                    - DEFAULT
+                    - IPTABLES
+                    - NONE
+                    type: string
+                  hosts:
+                    items:
+                      format: string
+                      type: string
+                    type: array
+                  port:
+                    properties:
+                      name:
+                        format: string
+                        type: string
+                      number:
+                        type: integer
+                      protocol:
+                        format: string
+                        type: string
+                    type: object
+                type: object
+              type: array
+            ingress:
+              items:
+                properties:
+                  bind:
+                    format: string
+                    type: string
+                  captureMode:
+                    enum:
+                    - DEFAULT
+                    - IPTABLES
+                    - NONE
+                    type: string
+                  defaultEndpoint:
+                    format: string
+                    type: string
+                  port:
+                    properties:
+                      name:
+                        format: string
+                        type: string
+                      number:
+                        type: integer
+                      protocol:
+                        format: string
+                        type: string
+                    type: object
+                type: object
+              type: array
+            outboundTrafficPolicy:
+              properties:
+                mode:
+                  enum:
+                  - REGISTRY_ONLY
+                  - ALLOW_ANY
+                  type: string
+              type: object
+            workloadSelector:
+              properties:
+                labels:
+                  additionalProperties:
+                    format: string
+                    type: string
+                  type: object
+              type: object
+          type: object
+      type: object
   versions:
-    - name: v1alpha3
-      served: true
-      storage: true
+  - name: v1alpha3
+    served: true
+    storage: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ---
