Support standalone Istio certificate controller for DNS certificate provisioning
Istio certificate controller (Chiron) can run in the following modes:
- Pilot use Chiron to provision DNS certificates.
- For the environment without Pilot, Chiron runs in its standalone mode.

--- a/install/kubernetes/helm/istio/values.yaml
+++ b/install/kubernetes/helm/istio/values.yaml
@@ -29,6 +29,13 @@ galley:
   enabled: true
 
 #
+# chiron configuration, refer to charts/chiron/values.yaml
+# for detailed configuration
+#
+chiron:
+  enabled: false
+
+#
 # mixer configuration
 #
 # @see charts/mixer/values.yaml for all values
