--- a/install/kubernetes/helm/istio/charts/chiron/Chart.yaml
+++ b/install/kubernetes/helm/istio/charts/chiron/Chart.yaml
@@ -1,16 +1,11 @@
 apiVersion: v1
-name: istio
+name: chiron
 version: 1.1.0
 appVersion: 1.1.0
-tillerVersion: ">=2.7.2-0"
-description: Helm chart for all istio components
+tillerVersion: ">=2.7.2"
+description: Helm chart for chiron deployment
 keywords:
   - istio
-  - security
-  - sidecarInjectorWebhook
-  - mixer
-  - pilot
-  - galley
   - chiron
 sources:
   - http://github.com/istio/istio
