--- a/install/kubernetes/helm/istio/requirements.yaml
+++ b/install/kubernetes/helm/istio/requirements.yaml
@@ -29,6 +29,9 @@ dependencies:
   - name: galley
     version: 1.1.0
     condition: galley.enabled
+  - name: chiron
+    version: 1.1.0
+    condition: chiron.enabled
   - name: kiali
     version: 1.1.0
     condition: kiali.enabled
