--- a/install/kubernetes/helm/istio/charts/security/templates/enable-mesh-mtls.yaml
+++ b/install/kubernetes/helm/istio/charts/security/templates/enable-mesh-mtls.yaml
@@ -17,6 +17,7 @@ spec:
   peers:
   - mtls: {}
 ---
+{{- if not .Values.global.mtls.auto }}
 # Corresponding destination rule to configure client side to use mutual TLS when talking to
 # any service (host) in the mesh.
 apiVersion: networking.istio.io/v1alpha3
@@ -39,6 +40,7 @@ spec:
     tls:
       mode: ISTIO_MUTUAL
 ---
+{{- end }}
 # Destination rule to disable (m)TLS when talking to API server, as API server doesn't have sidecar.
 # Customer should add similar destination rules for other services that don't have sidecar.
 apiVersion: networking.istio.io/v1alpha3
