--- a/install/kubernetes/helm/istio/charts/security/values.yaml
+++ b/install/kubernetes/helm/istio/charts/security/values.yaml
@@ -17,7 +17,7 @@ podAnnotations: {}
 citadelHealthCheck: false
 # 90*24hour = 2160h
 workloadCertTtl: 2160h
-
+# Environment variables that configure Citadel.
 env: {}
 
 # Determines Citadel default behavior if the ca.istio.io/env or ca.istio.io/override
