--- a/install/kubernetes/helm/istio/charts/security/values.yaml
+++ b/install/kubernetes/helm/istio/charts/security/values.yaml
@@ -13,6 +13,8 @@ tolerations: []
 citadelHealthCheck: false
 # 90*24hour = 2160h
 workloadCertTtl: 2160h
+# Environment variables that configure Citadel.
+env: {}
 
 # Specify the pod anti-affinity that allows you to constrain which nodes
 # your pod is eligible to be scheduled based on labels on pods that are
