cherry-pick 215de60bc4566c67c9881f1ed8453b0cecefe77f

--- a/install/kubernetes/helm/istio/charts/security/values.yaml
+++ b/install/kubernetes/helm/istio/charts/security/values.yaml
@@ -6,6 +6,10 @@ image: citadel
 selfSigned: true # indicate if self-signed CA is used.
 createMeshPolicy: true
 nodeSelector: {}
+# 90*24hour = 2160h
+workloadCertTtl: 2160h
+# Environment variables that configure Citadel.
+env: {}
 
 # Specify the pod anti-affinity that allows you to constrain which nodes
 # your pod is eligible to be scheduled based on labels on pods that are
