Configure the option --reconcileWebhookConfig based on DNS certificate provisioning

--- a/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/templates/deployment.yaml
@@ -52,7 +52,11 @@ spec:
             - --meshConfig=/etc/istio/config/mesh
             - --healthCheckInterval=2s
             - --healthCheckFile=/health
-            - --reconcileWebhookConfig={{ .Values.reconcileWebhookConfig }}
+{{- if .Values.global.certificates }}
+            - --reconcileWebhookConfig=false
+{{- else }}
+            - --reconcileWebhookConfig=true
+{{- end }}
           volumeMounts:
           - name: config-volume
             mountPath: /etc/istio/config
