--- a/galley/pkg/config/analysis/analyzers/testdata/virtualservice_gateways.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/virtualservice_gateways.yaml
@@ -27,3 +27,13 @@ spec:
   - "*"
   gateways:
   - httpbin-gateway-bogus # Expected: validation error since this gateway does not exist
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: httpbin-mesh
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - mesh # Expected: no validation error, "mesh" is a special-case value
