--- a/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/sidecarInjectorWebhook/templates/deployment.yaml
@@ -52,7 +52,7 @@ spec:
             - --meshConfig=/etc/istio/config/mesh
             - --healthCheckInterval=2s
             - --healthCheckFile=/health
-{{- if .Values.global.certificates }}
+{{- if .Values.global.operator }}
             - --reconcileWebhookConfig=false
 {{- else }}
             - --reconcileWebhookConfig=true
