Fix CRD jobs to have DNS-compatible names
The name field of CRD jobs comes from a truncated .Value.global.tag.
This could end in a hyphen, which is not a legal k8s name.
Trim any hyphen from the end of the name.

--- a/install/kubernetes/helm/istio-init/templates/job-crd-all.yaml
+++ b/install/kubernetes/helm/istio-init/templates/job-crd-all.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: istio-init-crd-all-{{ .Values.global.tag | printf "%v" | trunc 32 }}
+  name: istio-init-crd-all-{{ .Values.global.tag | printf "%v" | trunc 32 | trimSuffix "-" }}
 spec:
   template:
     metadata:
