--- a/install/kubernetes/helm/istio-init/templates/job-crd-mixer.yaml
+++ b/install/kubernetes/helm/istio-init/templates/job-crd-mixer.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: istio-init-crd-mixer-{{ .Values.global.tag | printf "%v" | trunc 32 }}
+  name: istio-init-crd-mixer-{{ .Values.global.tag | printf "%v" | trunc 32 | trimSuffix "-" }}
 spec:
   template:
     metadata:
