--- a/install/kubernetes/helm/istio/values.yaml
+++ b/install/kubernetes/helm/istio/values.yaml
@@ -106,11 +106,11 @@ istiocoredns:
 global:
   # Default hub for Istio images.
   # Releases are published to docker hub under 'istio' project.
-  # Daily builds from prow are on gcr.io
-  hub: gcr.io/istio-release
+  # Dev builds from prow are on gcr.io
+  hub: gcr.io/istio-testing
 
   # Default tag for Istio images.
-  tag: master-latest-daily
+  tag: latest
 
   # Comma-separated minimum per-scope logging level of messages to output, in the form of <scope>:<level>,<scope>:<level>
   # The control plane has different scopes depending on component, but can configure default log level across all components
