fix trailing space in meshNetworks to allow edits
related https://github.com/istio/istio/pull/16820

--- a/install/kubernetes/helm/istio/templates/configmap.yaml
+++ b/install/kubernetes/helm/istio/templates/configmap.yaml
@@ -317,7 +317,7 @@ data:
   meshNetworks: |-
   {{- if .Values.global.meshNetworks }}
     networks:
-{{ toYaml .Values.global.meshNetworks | indent 6 }}
+{{ toYaml .Values.global.meshNetworks | trim | indent 6 }}
   {{- else }}
     networks: {}
   {{- end }}
