attemp to fix stats filter

--- a/tests/integration/telemetry/stats/prometheus/testdata/metadata_exchange_filter.yaml
+++ b/tests/integration/telemetry/stats/prometheus/testdata/metadata_exchange_filter.yaml
@@ -6,7 +6,7 @@ spec:
   configPatches:
     - applyTo: HTTP_FILTER
       match:
-        context: ANY # inbound, outbound, and gateway
+        context: SIDECAR_INBOUND # inbound, outbound, and gateway
         listener:
           filterChain:
             filter:
@@ -17,6 +17,45 @@ spec:
           name: envoy.filters.http.wasm
           config:
             config:
+              vm_id: inbound_vm
+              configuration: envoy.wasm.metadata_exchange
+              vm_config:
+                runtime: envoy.wasm.runtime.null
+                code:
+                  inline_string: envoy.wasm.metadata_exchange
+    - applyTo: HTTP_FILTER
+      match:
+        context: SIDECAR_OUTBOUND # inbound, outbound, and gateway
+        listener:
+          filterChain:
+            filter:
+              name: "envoy.http_connection_manager"
+      patch:
+        operation: INSERT_BEFORE
+        value:
+          name: envoy.filters.http.wasm
+          config:
+            config:
+              vm_id: outbound_vm
+              configuration: envoy.wasm.metadata_exchange
+              vm_config:
+                runtime: envoy.wasm.runtime.null
+                code:
+                  inline_string: envoy.wasm.metadata_exchange
+    - applyTo: HTTP_FILTER
+      match:
+        context: GATEWAY # inbound, outbound, and gateway
+        listener:
+          filterChain:
+            filter:
+              name: "envoy.http_connection_manager"
+      patch:
+        operation: INSERT_BEFORE
+        value:
+          name: envoy.filters.http.wasm
+          config:
+            config:
+              vm_id: gateway_vm
               configuration: envoy.wasm.metadata_exchange
               vm_config:
                 runtime: envoy.wasm.runtime.null
