--- a/tests/integration/telemetry/stats/prometheus/testdata/stats_filter.yaml
+++ b/tests/integration/telemetry/stats/prometheus/testdata/stats_filter.yaml
@@ -20,6 +20,7 @@ spec:
           config:
             config:
               vm_id: outbound_vm
+              root_id: outbound_root
               configuration: |
                 {
                   "debug": "false",
@@ -45,6 +46,7 @@ spec:
           config:
             config:
               vm_id: inbound_vm
+              root_id: inbound_root
               configuration: |
                 {
                   "debug": "false",
@@ -70,6 +72,7 @@ spec:
           config:
             config:
               vm_id: gateway_vm
+              root_id: gateway_root
               configuration: |
                 {
                   "debug": "false",
