Allow istioctl validators to access Deployment

--- a/galley/pkg/config/meta/metadata/metadata.yaml
+++ b/galley/pkg/config/meta/metadata/metadata.yaml
@@ -139,6 +139,10 @@ collections:
     proto: "k8s.io.api.core.v1.Pod"
     protoPackage: "k8s.io/api/core/v1"
 
+  - name: "k8s/apps/v1/deployments"
+    proto: "k8s.io.api.apps.v1.Deployment"
+    protoPackage: "k8s.io/api/apps/v1"
+
   - name: "k8s/core/v1/services"
     proto: "k8s.io.api.core.v1.ServiceSpec"
     protoPackage: "k8s.io/api/core/v1"
@@ -577,6 +581,7 @@ snapshots:
       - "k8s/core/v1/namespaces"
       - "k8s/core/v1/services"
       - "k8s/core/v1/pods"
+      - "k8s/apps/v1/deployments"
 
 # Configuration for input sources
 sources:
@@ -609,6 +614,12 @@ sources:
     - collection: "k8s/core/v1/pods"
       kind: "Pod"
       plural: "pods"
+      version: "v1"
+
+    - collection: "k8s/apps/v1/deployments"
+      kind: "Deployment"
+      plural: "Deployments"
+      group: "apps"
       version: "v1"
 
     - collection: "k8s/core/v1/endpoints"
@@ -977,6 +988,7 @@ transforms:
       "k8s/core/v1/namespaces": "k8s/core/v1/namespaces"
       "k8s/core/v1/services": "k8s/core/v1/services"
       "k8s/core/v1/pods": "k8s/core/v1/pods"
+      "k8s/apps/v1/deployments": "k8s/apps/v1/deployments"
       "istio/mesh/v1alpha1/MeshConfig": "istio/mesh/v1alpha1/MeshConfig"
 
       # Legacy Mixer CRD mappings
