--- a/install/kubernetes/helm/istio-init/files/crd-10.yaml
+++ b/install/kubernetes/helm/istio-init/files/crd-10.yaml
@@ -3343,8 +3343,8 @@ spec:
                     items:
                       properties:
                         charge:
-                          format: int64
-                          type: integer
+                          format: string
+                          type: string
                         quota:
                           format: string
                           type: string
