--- a/install/kubernetes/helm/istio/charts/galley/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/galley/templates/deployment.yaml
@@ -24,8 +24,11 @@ spec:
         app: {{ template "galley.name" . }}
         chart: {{ template "galley.chart" . }}
         heritage: {{ .Release.Service }}
-        release: {{ .Release.Name }}      
+        release: {{ .Release.Name }}
         istio: galley
+{{- if .Values.global.controlPlaneSecurityEnabled }}
+        security.istio.io/mtlsReady: "true"
+{{- end }}
       annotations:
         sidecar.istio.io/inject: "false"
          {{- if .Values.podAnnotations }}
