--- a/install/kubernetes/helm/istio/charts/mixer/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/mixer/templates/deployment.yaml
@@ -427,6 +427,9 @@ spec:
         chart: {{ template "mixer.chart" $ }}
         heritage: {{ $.Release.Service }}
         release: {{ $.Release.Name }}
+{{- if $.Values.global.controlPlaneSecurityEnabled }}
+        security.istio.io/mtlsReady: "true"
+{{- end }}
         istio: mixer
         istio-mixer-type: {{ $key }}
       annotations:
