litmus test - deleting global DRs
Signed-off-by: Shriram Rajagopalan <rshriram@tetrate.io>

--- a/tests/integration/security/testdata/global-mtls-on.yaml
+++ b/tests/integration/security/testdata/global-mtls-on.yaml
@@ -6,12 +6,12 @@ spec:
   peers:
   - mtls: {}
 ---
-apiVersion: "networking.istio.io/v1alpha3"
-kind: "DestinationRule"
-metadata:
-  name: "default"
-spec:
-  host: "*.local"
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
+# apiVersion: "networking.istio.io/v1alpha3"
+# kind: "DestinationRule"
+# metadata:
+#   name: "default"
+# spec:
+#   host: "*.local"
+#   trafficPolicy:
+#     tls:
+#       mode: ISTIO_MUTUAL
