--- a/tests/e2e/tests/pilot/testdata/networking/v1alpha3/rule-503test-destinationrule-c-add-subset.yaml
+++ b/tests/e2e/tests/pilot/testdata/networking/v1alpha3/rule-503test-destinationrule-c-add-subset.yaml
@@ -4,11 +4,11 @@ metadata:
   name: destination-rule-c
 spec:
   host: c
-  {{if eq .globalMTlsEnable "true"}}
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
-  {{end}}
+  # {{if eq .globalMTlsEnable "true"}}
+  # trafficPolicy:
+  #   tls:
+  #     mode: ISTIO_MUTUAL
+  # {{end}}
   subsets:
     - name: v1
       labels:
